' *******************************************************************************
' Copyright (c) 2026 Contributors to the Eclipse Foundation
'
' See the NOTICE file(s) distributed with this work for additional
' information regarding copyright ownership.
'
' This program and the accompanying materials are made available under the
' terms of the Apache License Version 2.0 which is available at
' https://www.apache.org/licenses/LICENSE-2.0
'
' SPDX-License-Identifier: Apache-2.0
' *******************************************************************************

@startuml ts_client_ipc_channel
!theme plain

title libTSClient Shared Memory IPC

legend top left
    |= Color          |= Description              |
    | <#LightPink>    | IPC components             |
    | <#LightCyan>    | Shared memory region       |
    | <#LightSalmon>  | TimeDaemon adapter         |
endlegend

package "TimeSlave Process" {
    class GptpIpcPublisher #LightPink {
        - region_ : GptpIpcRegion*
        - shm_resource_ : shared_ptr<ISharedMemoryResource>
        - ipc_name_ : string
        + Init(name) : bool
        + Publish(data : GptpIpcData) : void
        + Destroy() : void
    }
}

package "Shared Memory" {
    class GptpIpcRegion <<aligned(64)>> #LightCyan {
        + magic : atomic<uint32_t> = 0x47505450
        + seq : atomic<uint32_t>
        + data : GptpIpcData
        + seq_confirm : atomic<uint32_t>
        --
        64-byte aligned for\ncache line efficiency
    }
}

package "TimeDaemon Process" {
    class GptpIpcReceiver #LightPink {
        - region_ : const GptpIpcRegion*
        - shm_resource_ : shared_ptr<ISharedMemoryResource>
        + Init(name) : bool
        + Receive() : std::optional<GptpIpcData>
        + Close() : void
    }

    class ShmPTPEngine #LightSalmon {
        - receiver_ : GptpIpcReceiver
        - ipc_name_ : string
        + Initialize() : bool
        + Deinitialize() : bool
        + ReadPTPSnapshot(info : PtpTimeInfo&) : bool
    }
}

GptpIpcPublisher --> GptpIpcRegion : "shm_open(O_CREAT)\nmmap(PROT_WRITE)"
GptpIpcReceiver --> GptpIpcRegion : "shm_open(O_RDONLY)\nmmap(PROT_READ)"
ShmPTPEngine *-- GptpIpcReceiver
ShmPTPEngine ..> "PtpTimeInfo" : converts to

note right of GptpIpcRegion
  **Seqlock Protocol:**
  Writer: seq++ (odd) → fence → memcpy → seq_confirm++, seq++ (even)
  Reader: read seq1 (even) → memcpy → fence → read seq2, seq3
          retry if seq1 != seq2 or seq1 != seq3
  Retry up to 20 times on torn read
end note

note bottom of ShmPTPEngine
  Maps GptpIpcData fields to PtpTimeInfo.
  Instantiated as GPTPShmMachine via CreateGPTPShmMachine().
end note

@enduml
